<resources>
    <string name="app_name">Rugby Score Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score">0</string>
    <string name="score_3">+5 Try</string>
    <string name="score_2">+2 Conversion</string>
    <string name="score_1">+3 Penatly</string>
    <string name="score_4">+3 Drop Kick</string>
    <string name="reset_button">Reset</string>
    <string name="start_timer">Start</string>
    <string name="stop_timer">Stop</string>
    <string name="pause_timer">Pause</string>
</resources>
