<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/team_a"
                android:textColor="@color/teamTextColor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="@string/score"
                android:textColor="@color/scoreTextColor"
                android:textSize="56sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="displayThreeTeamA"
                android:paddingBottom="8dp"
                android:text="@string/score_3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="displayTwoTeamA"
                android:paddingBottom="8dp"
                android:text="@string/score_2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="displayFreeThrowTeamA"
                android:paddingBottom="8dp"
                android:text="@string/score_1"
                android:textAllCaps="true" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:text="@string/team_b"
                android:textColor="@color/teamTextColor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="@string/score"
                android:textColor="@color/scoreTextColor"
                android:textSize="56sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="displayThreeTeamB"
                android:paddingBottom="8dp"
                android:text="@string/score_3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="displayTwoTeamB"
                android:paddingBottom="8dp"
                android:text="@string/score_2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="displayFreeThrowTeamB"
                android:paddingBottom="8dp"
                android:text="@string/score_1"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/reset_button"
        android:textAllCaps="true" />

</RelativeLayout>

